<?xml version="1.0"?>
<package format="2">
  <name>my_pkg</name>
  <version>0.0.0</version>
  <description>A activity package with basic pub-sub, ros param, and custom msgs, implemented as a class!</description>

  <author email="methyldragon@gmail.com">methylDragon</author>
  <maintainer email="methyldragon@gmail.com">methylDragon</maintainer>
  <url type="website">http://github.com/methylDragon</url>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>msg_example_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>msg_example_msgs</build_export_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>msg_example_msgs</exec_depend>
  
</package>
